--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="rock_paper_scissor.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section id="container">
+        <h1>Rock, Papers, Scissors</h1>
+        <div id="buttons">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+        </div>
+    </section>
 </body>
 </html>
