--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="rock_paper_scissor.js"></script>
+    <script src="rock_paper_scissor.js" defer></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,6 +15,7 @@
             <button id="paper">Paper</button>
             <button id="scissors">Scissors</button>
         </div>
+        <div id="text"></div>
     </section>
 </body>
 </html>
